Auto run deploy.yml

--- a/deploy.yml
+++ b/deploy.yml
@@ -26,7 +26,7 @@
     shell: 'echo "deb http://packages.elastic.co/kibana/4.4/debian stable main" | sudo tee -a /etc/apt/sources.list.d/kibana-4.4.x.list'
 
   - name: Add the repository definition for logstash
-    shell: 'echo 'deb http://packages.elastic.co/logstash/2.2/debian stable main' | sudo tee /etc/apt/sources.list.d/logstash-2.2.x.list'
+    shell: 'echo "deb http://packages.elastic.co/logstash/2.2/debian stable main" | sudo tee /etc/apt/sources.list.d/logstash-2.2.x.list'
 
   - name: Install JRE
     apt: pkg=oracle-java8-installer state=latest update-cache=yes force=yes
@@ -45,6 +45,12 @@
 
   - name: Create certificate storage
     shell: 'sudo mkdir -p /etc/pki/elk/certs'
+    ignore_errors: yes
 
   - name: Create private key storage
     shell: 'sudo mkdir /etc/pki/elk/private'
+    ignore_errors: yes
+
+  - name: Create SSL Certs
+    shell: 'sudo openssl req -config /etc/ssl/openssl.cnf -x509 -days 3650 -batch -nodes -newkey rsa:2048 -keyout /etc/pki/elk/private/logstash-forwarder.key -out /etc/pki/elk/certs/logstash-forwarder.crt'
+    ignore_errors: yes
