--- a/elk/elk_server.yml
+++ b/elk/elk_server.yml
@@ -8,7 +8,7 @@
     apt_repository: repo='ppa:webupd8team/java'
   
   - name: Add Nginx Repository
-    apt_repository: repo='ppa:nginx/stable'
+    apt_repository: repo='ppa:nginx/mainline'
 
   - name: Update System
     action: apt update-cache=yes
