--- a/elk/elk_server.yml
+++ b/elk/elk_server.yml
@@ -4,6 +4,12 @@
   serial: 1
   tasks:
 
+  - name: Create working directory
+    file: path=/home/simon/working state=directory mode=0700
+
+  - name: Move to working directory
+    command: chdir=/home/simon/working
+
   - name: Add Java 8 Repository
     apt_repository: repo='ppa:webupd8team/java'
   
