--- a/suricata/suricata.yml
+++ b/suricata/suricata.yml
@@ -20,7 +20,7 @@
     copy: src=config/suricata.yaml dest=/etc/suricata/suricata.yaml mode=644
 
   - name: Copy Oinkmaster configuration file
-    copy: src=config/oinkmaster.conf /etc/oinkmaster.conf
+    copy: src=config/oinkmaster.conf /etc/oinkmaster.conf mode=644
 
   - name: Run Oinkmaster (Update Rules)
     command: 'sudo oinkmaster -C /etc/oinkmaster.conf -o /etc/suricata/rules'
