--- a/suricata/suricata.yml
+++ b/suricata/suricata.yml
@@ -17,10 +17,10 @@
     - oinkmaster
 
   - name: Copy Suricata configuration file
-    copy: src=config/suricata.yaml dest=/etc/suricata/suricata.yaml mode=644
+    copy: src=config/suricata.yaml dest=/etc/suricata/suricata.yaml owner=simon mode=644
 
   - name: Copy Oinkmaster configuration file
-    copy: src=config/oinkmaster.conf /etc/oinkmaster.conf mode=644
+    copy: src=config/oinkmaster.conf /etc/oinkmaster.conf owner=simon mode=644
 
   - name: Run Oinkmaster (Update Rules)
     command: 'sudo oinkmaster -C /etc/oinkmaster.conf -o /etc/suricata/rules'
