--- a/suricata/suricata.yml
+++ b/suricata/suricata.yml
@@ -26,7 +26,7 @@
     command: 'sudo oinkmaster -C /etc/oinkmaster.conf -o /etc/suricata/rules'
 
   - name: Add above task as cronjob
-    cron: name="Oinkmaster" minute="45" hour="8" job="sudo oinkmaster -C /etc/oinkmaster.conf -o /etc/suricata/rules'
+    cron: name="Oinkmaster" minute="45" hour="8" job="sudo oinkmaster -C /etc/oinkmaster.conf -o /etc/suricata/rules"
 
   - name: Start Suricata
     command: 'sudo suricata -c /etc/suricata/suricarta.yaml -i eth0 --init-errors-fatal'
