--- a/suricata/suricata.yml
+++ b/suricata/suricata.yml
@@ -29,4 +29,4 @@
     cron: name="Oinkmaster" minute="45" hour="8" job="sudo oinkmaster -C /etc/oinkmaster.conf -o /etc/suricata/rules"
 
   - name: Start Suricata
-    command: 'sudo suricata -c /etc/suricata/suricarta.yaml -i eth0 --init-errors-fatal'
+    command: 'sudo suricata -c /etc/suricata/suricata.yaml -i eth0 --init-errors-fatal'
