--- a/suricata/suricata.yml
+++ b/suricata/suricata.yml
@@ -26,7 +26,17 @@
     command: 'sudo oinkmaster -C /etc/oinkmaster.conf -o /etc/suricata/rules'
 
   - name: Add above task as cronjob
-    cron: name="Oinkmaster" minute="45" hour="8" job="sudo oinkmaster -C /etc/oinkmaster.conf -o /etc/suricata/rules"
+    cron: name="Oinkmaster" minute="45" hour="8" job="oinkmaster -C /etc/oinkmaster.conf -o /etc/suricata/rules"
 
   - name: Start Suricata
-    command: 'sudo suricata -c /etc/suricata/suricata.yaml -i eth0 --init-errors-fatal -D'
+    command: 'suricata -c /etc/suricata/suricata.yaml -i eth0 --init-errors-fatal -D'
+    ignore_errors: yes
+
+  - name: Start Suricata if not started
+    service: name=suricata state=started
+
+  - name: Test if Suricata is working or not
+    command: 'curl testmyids.com'
+
+  - name: Print Instruction
+    debug: msg="Please check /var/log/suricata/fast.log. If you see output like 'GPL', then Suricata is functioning properly"
