--- a/suricata/config/suricata.yaml
+++ b/suricata/config/suricata.yaml
@@ -410,12 +410,12 @@ magic-file: /usr/share/file/magic
 # On linux >= 3.6, you can set the fail-open option to yes to have the kernel
 # accept the packet if suricata is not able to keep pace.
 nfq:
-#  mode: accept
-#  repeat-mark: 1
-#  repeat-mask: 1
-#  route-queue: 2
-#  batchcount: 20
-#  fail-open: yes
+  mode: accept
+  repeat-mark: 1
+  repeat-mask: 1
+  route-queue: 2
+  batchcount: 20
+  fail-open: yes
 
 #nflog support
 nflog:
@@ -980,9 +980,9 @@ logging:
       enabled: yes
       # type: json
   - file:
-      enabled: no
+      enabled: yes
       filename: /var/log/suricata/suricata.log
-      # type: json
+      type: json
   - syslog:
       enabled: no
       facility: local5
