--- a/suricata/config/suricata.yaml
+++ b/suricata/config/suricata.yaml
@@ -902,7 +902,7 @@ flow-timeouts:
 stream:
   memcap: 32mb
   checksum-validation: yes      # reject wrong csums
-  inline: auto                  # auto will use inline mode in IPS mode, yes or no set it statically
+  inline: yes                  # auto will use inline mode in IPS mode, yes or no set it statically
   reassembly:
     memcap: 128mb
     depth: 1mb                  # reassemble 1mb into a stream
